src/snapshots/afrotd__parser__tests__rule_6.3.2.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 6
  - 3
  - 2
title: Jenseits der neutralen Zone
text: "\ta) Kein Spieler des Kicking Teams, der sich inbounds befindet, darf einen Scrimmage Kick berühren, der die neutrale Zone überquert hat, bevor der Ball einen Gegner berührt. Das ist ein illegales Berühren, eine Violation, die dem Receiving Team das Recht gibt, den Ball am Punkt der Violation zu übernehmen (Ausnahme: Regel 6.3.4) (A.R. 2.12.2.I und A.R. 6.3.2.I).\n\tb) Das Privileg ist aufgehoben, wenn eine Strafe für ein Live Ball Foul durch eines der Teams angenommen wird (A.R. 6.3.2.I bis 6.3.2.IV, A.R. 6.3.11.I bis 6.3.11.III und A.R. 10.1.4.VII).\n\tc) Das Privileg ist aufgehoben, wenn sich Fouls ereignen, die sich aufheben.\n\td) Illegales Berühren des Kicks während eines Try, während Extraperioden oder in Team A’s Endzone wird ignoriert."
interpretations: []
