src/snapshots/afrotd__parser__tests__rule_6.3.3.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 6
  - 3
  - 3
title: Alle werden berechtigt
text: "Wenn der Scrimmage Kick, der die neutrale Zone überquert hat, einen inbounds befindlichen Receiving Team-Spieler berührt, darf jeder Spieler den Ball fangen oder recovern (Regel 6.3.1.b) (Ausnahme: Regel 6.3.4 und 6.5.1.b)."
interpretations: []
