src/snapshots/afrotd__parser__tests__rule_6.3.6.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 6
  - 3
  - 6
title: Fangen oder Recovern durch Kicking Team
text: "\ta) Wird ein Scrimmage Kick, der die neutrale Zone überquert hat, von einem Spieler des Kicking Teams gefangen oder recovert, wird der Ball dead (A.R. 6.3.1.IV). Der Ball gehört zum Receiving Team am Dead Ball Spot, es sei denn, das Kicking Team ist in legalem Ballbesitz, wenn der Ball für dead erklärt wird. In diesem Fall gehört der Ball zum Kicking Team (Ausnahme: Regel 8.4.2.b).\n\tb) Wenn gegnerische Spieler, die jeweils berechtigt sind, einen Scrimmage Kick zu berühren, gleichzeitig einen Kick recovern oder fangen, wird der Ball durch den gemeinsamen Ballbesitz dead und dem Receiving Team zuerkannt (Regeln 2.4.4 und 4.1.3.l)."
interpretations: []
