src/snapshots/afrotd__parser__tests__rule_6.5.2.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 6
  - 5
  - 2
title: Kein Advancen
text: "Kein Team B-Spieler darf einen gefangenen oder recoverten Ball mehr als zwei Schritte in jede Richtung advancen, nachdem ein gültiges oder ungültiges Fair Catch-Signal von irgendeinem Team B-Spieler gegeben wurde (A.R. 6.5.2.I bis 6.5.2.III). Strafe: Dead Ball Foul. Spielverzögerung. 5 Meter vom Succeeding Spot [S7 und S21]."
interpretations: []
